<?xml version="1.0"?>
<package format="2">
  <name>tiago_gym</name>
  <version>0.0.0</version>
  <description>The tiago_gym package</description>

  <maintainer email="edluffy@ncade.com">edluffy</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <build_depend>openai_ros</build_depend>
  <exec_depend>openai_ros</exec_depend>

</package>
